--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Password Generator Wannabe</title>
+    <title>Password Generator Wannabe BONUS</title>
 </head>
 <body>
-    <h1>Generatore di password (<span class="text-danger fw-bold">non sicure</span>)</h1>
-    <button onclick="generatePassword()">Genera la tua password</button>
-    <div id="passwordPhrase"></div>
+    <div class="container full-height d-flex justify-content-center align-items-center">
+        <div class="row py-5 bg-white rounded-3">
+            <div class="col-12 d-flex flex-column">
+                <h1 class="text-center">Generatore di password (<span class="text-danger fw-bold">non sicure</span>)</h1>
+                <button class="btn border-1 bg-black text-white w-50 mx-auto mt-5" onclick="generatePassword()">Genera la tua password</button>
+                <div class="text-center mt-5 fw-bold fs-3" id="passwordPhrase"></div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
 </html>
